# Simple-Chatbot

./: pyproject.toml
backend/: main-gen.py  main.py
frontend/: app.py
